2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/edit.py:
	* gaupol/gtk/view.py:
	Accept negative values in the frame cell renderer.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py:
	Move focus, at least the row, when projects emits a *-changed,
	subtitles-inserted or subtitles-removed signal.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/view.py:
	Do not register setting framerate with the undo/redo system.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py (_parse_args):
	Add brackets around NUM in the usage string.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_on_key_press_event):
	Disable Ctrl+PageUp/PageDown to allow them to be used solely for
	navigation between notebook tabs.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/mpsub.py (_clean_lines):
	Remove newlines from the beginning of lines to stop them from being
	prepended to the header.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/header-dialog.glade:
	Do not wrap text in text views.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/save.py (set_format, set_newline):
	* gaupol/gtk/dialogs/file/subtitle.py (set_encoding):
	Allow values of None, with which nothing will be done.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/save.py (save_main_document):
	Update references to renamed variables and methods.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER.MPLAYER.command):
	Add -slang (without parameters) to avoid loading VobSubs in Matroska
	video containers such that they would override the Gaupol-edited
	subtitle file given with the -sub option.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (on_select_video_file_activate):
	Set filechooser filename to page.project.video_path.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>
